--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="style.css" />
     <title>Memory Cards</title>
   </head>
@@ -27,14 +28,14 @@
 
     <!-- CARDS CONTAINER -->
     <div id="cards-container" class="cards">
-      <div class="card active">
+      <!-- <div class="card active">
         <div class="inner-card">
           <div class="inner-card-front">
             <p>What is PHP?</p>
           </div>
-        </div>
-        <div class="inner-card-back">
-          <p>A programming language</p>
+          <div class="inner-card-back">
+            <p>A programming language</p>
+          </div>
         </div>
       </div>
 
@@ -43,11 +44,11 @@
           <div class="inner-card-front">
             <p>What is PHP?</p>
           </div>
+          <div class="inner-card-back">
+            <p>A programming language</p>
+          </div>
         </div>
-        <div class="inner-card-back">
-          <p>A programming language</p>
-        </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- NAVIGATION -->
@@ -78,11 +79,11 @@
         <label for="answer">Answer</label>
         <textarea id="answer" placeholder="Enter answers..."></textarea>
       </div>
-    </div>
 
-    <button id="add-card" class="btn">
-      <i class="fas fa-plus"></i> Add Card
-    </button>
+      <button id="add-card" class="btn">
+        <i class="fas fa-plus"></i> Add Card
+      </button>
+    </div>
 
     <script src="script.js"></script>
   </body>
